--- a/handbook.ini
+++ b/handbook.ini
@@ -9,8 +9,12 @@ input = /project/config/benchmark/MacroCell/
 output = /home/bowen/output/
 
 [case]
-case_num = 1
+case_num = 2
 
 [case.0]
 name = 6389U 
+trex_script_para = -m 100%%
+
+[case.1]
+name = 6389A 
 trex_script_para = -m 100%%
