--- a/handbook.ini
+++ b/handbook.ini
@@ -9,7 +9,7 @@ input = /project/config/benchmark/MacroCell/
 output = /home/bowen/output/
 
 [case]
-case_num = 2
+case_num = 4
 
 [case.0]
 name = 6389U 
@@ -17,4 +17,12 @@ trex_script_para = -m 100%%
 
 [case.1]
 name = 6389A 
+trex_script_para = -m 100%%
+
+[case.2]
+name = 6388U
+trex_script_para = -m 100%%
+
+[case.3]
+name = 6388A 
 trex_script_para = -m 100%%
