--- a/handbook.ini
+++ b/handbook.ini
@@ -9,7 +9,7 @@ input = /project/config/benchmark/MacroCell/
 output = /home/bowen/output/
 
 [case]
-case_num = 4
+case_num = 8
 
 [case.0]
 name = 6389U 
@@ -20,9 +20,25 @@ name = 6389A
 trex_script_para = -m 100%%
 
 [case.2]
-name = 6388U
+name = 12389U
 trex_script_para = -m 100%%
 
 [case.3]
+name = 12389A
+trex_script_para = -m 100%%
+
+[case.4]
+name = 6388U
+trex_script_para = -m 100%%
+
+[case.5]
 name = 6388A 
+trex_script_para = -m 100%%
+
+[case.6]
+name = 12388U
+trex_script_para = -m 100%%
+
+[case.7]
+name = 12388A 
 trex_script_para = -m 100%%
