--- a/handbook.ini
+++ b/handbook.ini
@@ -9,36 +9,56 @@ input = /project/config/benchmark/MacroCell/
 output = /home/bowen/output/
 
 [case]
-case_num = 8
+case_num = 12
+platform = SPR-SP
+algo = cus
+is_flex = true
+flex = 0,2
 
 [case.0]
-name = 6389U 
+name = 1376U 
 trex_script_para = -m 100%%
 
 [case.1]
-name = 6389A 
+name = 1376A 
 trex_script_para = -m 100%%
 
 [case.2]
-name = 12389U
+name = 1369U 
 trex_script_para = -m 100%%
 
 [case.3]
-name = 12389A
+name = 1369A 
 trex_script_para = -m 100%%
 
 [case.4]
-name = 6388U
+name = 6389U 
 trex_script_para = -m 100%%
 
 [case.5]
-name = 6388A 
+name = 6389A 
 trex_script_para = -m 100%%
 
 [case.6]
-name = 12388U
+name = 12389U
 trex_script_para = -m 100%%
 
 [case.7]
+name = 12389A
+trex_script_para = -m 100%%
+
+[case.8]
+name = 6388U
+trex_script_para = -m 100%%
+
+[case.9]
+name = 6388A 
+trex_script_para = -m 100%%
+
+[case.10]
+name = 12388U
+trex_script_para = -m 100%%
+
+[case.11]
 name = 12388A 
 trex_script_para = -m 100%%
