--- a/handbook.ini
+++ b/handbook.ini
@@ -1,64 +1,83 @@
 [path]
 oneapi = /opt/intel/oneapi/setvars.sh intel64 --force
-env = /home/bowen/env.sh
 trex = /opt/v3.04/
-du = /home/bowen/flexran-l2l3-du/
-uesim = /project/build/uesim/
-nr5g = /project/build/nr5g/
-input = /project/config/benchmark/MacroCell/
-output = /home/bowen/output/
+root = /home/bowen
+env = ${root}/env.sh
+du = ${root}/flexran-l2l3-du
+uesim = ${du}/project/build/uesim/
+nr5g = ${du}/project/build/nr5g/
+input = ${du}/project/config/benchmark/MacroCell/
+output = ${root}/output/
 
 [case]
 case_num = 12
 platform = SPR-SP
-algo = cus
-is_flex = true
-flex = 0,2
+retry_num = 1
+
+[case.algo]
+enable = yes
+name = cus
+
+[case.flex]
+enable = yes
+id = 3
 
 [case.0]
 name = 1376U 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.1]
 name = 1376A 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.2]
 name = 1369U 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.3]
 name = 1369A 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.4]
 name = 6389U 
 trex_script_para = -m 100%%
+algo = cus
 
-[case.5]
+[case.5] 
 name = 6389A 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.6]
 name = 12389U
 trex_script_para = -m 100%%
+algo = cus
 
 [case.7]
 name = 12389A
 trex_script_para = -m 100%%
+algo = cus
 
 [case.8]
 name = 6388U
 trex_script_para = -m 100%%
+algo = cus
 
 [case.9]
 name = 6388A 
 trex_script_para = -m 100%%
+algo = cus
 
 [case.10]
 name = 12388U
 trex_script_para = -m 100%%
+algo = cus
 
 [case.11]
 name = 12388A 
 trex_script_para = -m 100%%
+algo = cus
