--- a/handbook.ini
+++ b/handbook.ini
@@ -17,7 +17,7 @@ ht = on
 
 [case.algo]
 enable = yes
-name = cus
+name = zfs
 
 [case.flex]
 enable = yes
@@ -25,60 +25,60 @@ id = 0
 
 [case.0]
 name = 1376U 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.1]
 name = 1376A 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.2]
 name = 1369U 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.3]
 name = 1369A 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.4]
 name = 6389U 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.5] 
 name = 6389A 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.6]
 name = 12389U
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.7]
 name = 12389A
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.8]
 name = 6388U
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.9]
 name = 6388A 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.10]
 name = 12388U
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
 
 [case.11]
 name = 12388A 
-trex_script_para = -m 100%%
+trex_script_para = -m 100%
 algo = cus
