--- a/handbook.ini
+++ b/handbook.ini
@@ -10,76 +10,54 @@ input = ${du}/project/config/benchmark/MacroCell/
 output = ${root}/output/
 
 [case]
-case_num = 12
+case_num = 6
 platform = SPR-SP
 retry_num = 1
 ht = on
 duration = 30
 
-[case.algo]
-enable = yes
-dl = zfs
+[case.global]
+enable = no
+dl_algo = zfs
+am = yes
 
 [case.flex]
 enable = yes
-id = 1
+id = 2,3
 
 [case.0]
-name = 1376U 
+name = 1369
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
 [case.1]
-name = 1376A 
+name = 1376
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
 [case.2]
-name = 1369U 
+name = 6388
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
 [case.3]
-name = 1369A 
+name = 6389
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
 [case.4]
-name = 6389U 
+name = 12388
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
-[case.5] 
-name = 6389A 
+[case.5]
+name = 12389
 trex_script_para = -m 100%
 dl_algo = cus
+am = no
 
-[case.6]
-name = 12389U
-trex_script_para = -m 100%
-dl_algo = cus
-
-[case.7]
-name = 12389A
-trex_script_para = -m 100%
-dl_algo = cus
-
-[case.8]
-name = 6388U
-trex_script_para = -m 100%
-dl_algo = cus
-
-[case.9]
-name = 6388A 
-trex_script_para = -m 100%
-dl_algo = cus
-
-[case.10]
-name = 12388U
-trex_script_para = -m 100%
-dl_algo = cus
-
-[case.11]
-name = 12388A 
-trex_script_para = -m 100%
-dl_algo = cus
