--- a/handbook.ini
+++ b/handbook.ini
@@ -17,13 +17,13 @@ ht = on
 duration = 30
 
 [case.global]
-enable = no
+enable = yes
 dl_algo = zfs
 am = yes
 
 [case.flex]
 enable = yes
-id = 2,3
+id = 0
 
 [case.0]
 name = 1369
