--- a/handbook.ini
+++ b/handbook.ini
@@ -1,5 +1,5 @@
 [path]
-oneapi = /opt/intel/oneapi/setvars.sh intel64 --force
+oneapi = /opt/intel/oneapi/setvars.sh
 trex = /opt/v3.04/
 root = /home/bowen
 env = ${root}/env.sh
