--- a/handbook.ini
+++ b/handbook.ini
@@ -12,9 +12,10 @@ output = ${root}/output/
 case_num = 6
 platform = SPR-SP
 retry_num = 1
-ht = on
+ht = yes
 duration = 30
 has_trex = yes
+dsa = no
 
 [case.global]
 enable = yes
