--- a/handbook.ini
+++ b/handbook.ini
@@ -9,56 +9,67 @@ input = ${du}/project/config/benchmark/MacroCell/
 output = ${root}/output/
 
 [case]
-case_num = 6
-platform = SPR-SP
+case_num = 8
+platform = SPR-EE
 retry_num = 1
 ht = yes
 duration = 30
 has_trex = yes
-dsa = no
+dsa = yes
 
 [case.global]
-enable = yes
+enable = no
 dl_algo = zfs
-am = yes
+am = no
 
 [case.flex]
 enable = yes
-id = 0
+id = 6,7
 
 [case.0]
 name = 1369
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.1]
 name = 1376
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.2]
 name = 6388
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 20gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.3]
 name = 6389
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 20gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.4]
 name = 12388
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 25gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.5]
 name = 12389
-trex_script_para = -m 100%
+trex_script_para = -p 0 -m 25gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
+[case.6]
+name = 4300
+trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
+dl_algo = su
+am = yes
+
+[case.7]
+name = 18220
+trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
+dl_algo = su
+am = yes
