--- a/handbook.ini
+++ b/handbook.ini
@@ -9,22 +9,22 @@ input = ${du}/project/config/benchmark/MacroCell/
 output = ${root}/output/
 
 [case]
-case_num = 8
-platform = SPR-EE
+case_num = 6
+platform = SPR-SP
 retry_num = 1
 ht = yes
-duration = 30
+duration = 40
 has_trex = yes
 dsa = yes
 
 [case.global]
-enable = no
-dl_algo = zfs
-am = no
+enable = yes
+dl_algo = cus
+am = yes
 
 [case.flex]
 enable = yes
-id = 6,7
+id = 4,5
 
 [case.0]
 name = 1369
