--- a/handbook.ini
+++ b/handbook.ini
@@ -1,75 +1,73 @@
-[path]
-oneapi = /opt/intel/oneapi/setvars.sh
-trex = /opt/v3.04/
-root = /home/bowen
-du = ${root}/flexran-l2l3-du
-uesim = ${du}/project/build/uesim/
-nr5g = ${du}/project/build/nr5g/
-input = ${du}/project/config/benchmark/MacroCell/
-output = ${root}/output/
+[env]
+PATH = /home/bowen/env.sh
+trex = /opt/v3.05/
 
 [case]
-case_num = 6
-platform = SPR-SP
-retry_num = 1
-ht = yes
-duration = 40
-has_trex = yes
+case_num = 8
+platform = ICX-SP
+duration = 30
 dsa = no
 
 [case.global]
-enable = yes
-dl_algo = cus
-am = yes
+enable = no
+;su/zfs/bfs/cus
+dl_algo = zfs
+am = no
 
 [case.flex]
 enable = yes
-id = 0,1
+id = 0
 
 [case.0]
 name = 1369
+group = MacroCell
 trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.1]
 name = 1376
+group = MacroCell
 trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.2]
 name = 6388
+group = MacroCell
 trex_script_para = -p 0 -m 20gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.3]
 name = 6389
+group = MacroCell
 trex_script_para = -p 0 -m 20gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.4]
 name = 12388
+group = MacroCell
 trex_script_para = -p 0 -m 25gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.5]
 name = 12389
+group = MacroCell
 trex_script_para = -p 0 -m 25gbps,-p 1 -m 5gbps
 dl_algo = cus
 am = no
 
 [case.6]
 name = 4300
-trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
-dl_algo = su
-am = yes
+group = SmallCell
+trex_script_para = -p 0 -m 100%,-p 1 -m 100%
+am = no
 
 [case.7]
 name = 18220
-trex_script_para = -p 0 -m 10gbps,-p 1 -m 5gbps
-dl_algo = su
-am = yes
+group = NarrowBand
+trex_script_para = -p 0 -m 9gbps,-p 1 -m 4gbps
+am = no
